syntax = "proto3";

package helloworld;

option go_package = ".;github_com_ccsunnyfd_practice_grpc_demo_proto_helloworld";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayList (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}